--- a/css/styles.css
+++ b/css/styles.css
@@ -390,11 +390,10 @@ a {
   transform: scale(1.05);
 }
 
-.plan--popular:hover {
-  transform: scale(1.15);
-}
-
 @media screen and (min-width: 1024px) {
+  .plan--popular:hover {
+    transform: scale(1.15);
+  }
   .plan--popular {
     transform: scale(1.1);
   }
@@ -750,4 +749,14 @@ a {
   .block-domain__prices {
     grid-template-columns: repeat(auto-fit, minmax(10rem, 1fr));
   }
+}
+
+/* Plans Block */
+.block-plans .grid {
+  gap: 8rem 4rem;
+}
+
+.block-plans .card {
+  max-width: 500px;
+  margin: 0 auto;
 }
